@@ -1,22 +1,21 @@
 package com.kynsoft.finamer.invoicing.infrastructure.services;
 
+import com.kynsof.share.utils.BankerRounding;
+import com.kynsoft.finamer.invoicing.domain.dto.*;
 import com.kynsoft.finamer.invoicing.domain.dto.InvoiceXml.*;
 import com.kynsoft.finamer.invoicing.domain.dto.InvoiceXml.Tax;
-import com.kynsoft.finamer.invoicing.domain.dto.ManageHotelDto;
-import com.kynsoft.finamer.invoicing.domain.dto.ManageInvoiceDto;
-import com.kynsoft.finamer.invoicing.domain.dto.ManageBookingDto;
-import com.kynsoft.finamer.invoicing.domain.dto.ManageTradingCompaniesDto;
 import jakarta.xml.bind.JAXBContext;
 import jakarta.xml.bind.JAXBException;
 import jakarta.xml.bind.Marshaller;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 
 import java.io.StringWriter;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -30,99 +29,98 @@ public class InvoiceXmlService {
     private InvoiceXml mapToInvoiceXml(ManageInvoiceDto dto) {
         InvoiceXml invoiceXml = new InvoiceXml();
         ManageTradingCompaniesDto manageTradingCompaniesDto = dto.getHotel().getManageTradingCompanies();
+
         // General Data
         GeneralData generalData = new GeneralData();
-        generalData.setRef(dto.getHotel().getPrefixToInvoice() + dto.getInvoiceNumber());
-        generalData.setDate(LocalDate.now());
-        generalData.setCurrency("USD");
-        generalData.setTaxIncluded(true);
-        generalData.setStatus(""); // Default status
+        generalData.setRef(dto.getHotel().getPrefixToInvoice() + dto.getInvoiceNumberPrefix());
+        generalData.setDate(dto.getInvoiceDate().toLocalDate());
         invoiceXml.setGeneralData(generalData);
 
         // Supplier
         Supplier supplier = new Supplier();
-        supplier.setCode(dto.getHotel().getBabelCode() != null ? dto.getHotel().getBabelCode() : "");
-
-        supplier.setCif(dto.getHotel().getBabelCode() != null ? dto.getHotel().getBabelCode() : "");
-        supplier.setCompany(manageTradingCompaniesDto.getCompany() != null ? manageTradingCompaniesDto.getCompany() : "");
-        supplier.setAddress(manageTradingCompaniesDto.getAddress() != null ? manageTradingCompaniesDto.getAddress() : "");
-        supplier.setCity(manageTradingCompaniesDto.getCity() != null ? manageTradingCompaniesDto.getCity() : "");
-        supplier.setZipCode("N/A");
-        supplier.setCityState(manageTradingCompaniesDto.getCityState() != null ? manageTradingCompaniesDto.getCityState().getName() : "");//TODO
-        supplier.setCountry(manageTradingCompaniesDto.getCountry()!= null ? manageTradingCompaniesDto.getCountry().getName() : "");
+        supplier.setAddress(manageTradingCompaniesDto.getAddress() != null ? manageTradingCompaniesDto.getAddress() : StringUtils.EMPTY);
+        supplier.setCif(manageTradingCompaniesDto.getCif() != null ? manageTradingCompaniesDto.getCif() : StringUtils.EMPTY);
+        supplier.setCity(manageTradingCompaniesDto.getCity() != null ? manageTradingCompaniesDto.getCity() : StringUtils.EMPTY);
+        supplier.setCompany(manageTradingCompaniesDto.getCompany() != null ? manageTradingCompaniesDto.getCompany() : StringUtils.EMPTY);
+        supplier.setCountry(manageTradingCompaniesDto.getCountry()!= null ? manageTradingCompaniesDto.getCountry().getIso3() : StringUtils.EMPTY);
+        supplier.setCityState(manageTradingCompaniesDto.getCityState() != null ? manageTradingCompaniesDto.getCityState().getName() : StringUtils.EMPTY);
+        supplier.setZipCode(manageTradingCompaniesDto.getZipCode() != null ? manageTradingCompaniesDto.getZipCode() : StringUtils.EMPTY);
+        supplier.setCode(dto.getHotel().getBabelCode() != null ? dto.getHotel().getBabelCode() : StringUtils.EMPTY);
         invoiceXml.setSupplier(supplier);
 
         // Client
         Client client = new Client();
-        client.setCode(dto.getAgency().getCode() != null ? dto.getAgency().getCode() : "");
-        client.setCif(dto.getAgency().getCif() != null ? dto.getAgency().getCif() : "");
-        client.setCompany(dto.getAgency().getName() != null ? dto.getAgency().getName() : "");
-        client.setAddress(dto.getAgency().getAddress() != null ? dto.getAgency().getAddress() : "");
-        client.setCity(dto.getAgency().getCityState().getName() != null ? dto.getAgency().getCityState().getName() : "");
-        client.setZipCode(dto.getAgency().getZipCode() != null ? dto.getAgency().getZipCode() : "");
-        client.setCityState(dto.getAgency().getCityState().getName());
-        client.setCountry(dto.getAgency().getCountry().getCode());
-        client.setEmail(dto.getAgency().getMailingAddress() != null ? dto.getAgency().getMailingAddress() : "");
+        client.setAddress(dto.getAgency().getAddress() != null ? dto.getAgency().getAddress() : StringUtils.EMPTY);
+        client.setCity(dto.getAgency().getCity() != null ? dto.getAgency().getCity() : StringUtils.EMPTY);
+        client.setCompany(dto.getAgency().getName() != null ? dto.getAgency().getName() : StringUtils.EMPTY);
+        client.setCountry(dto.getAgency().getCountry() != null ? dto.getAgency().getCountry().getIso3() : StringUtils.EMPTY);
+        client.setCityState( dto.getAgency().getCityState() != null ? dto.getAgency().getCityState().getName() : StringUtils.EMPTY);
+        client.setEmail(dto.getAgency().getMailingAddress() != null ? dto.getAgency().getMailingAddress() : StringUtils.EMPTY);
+        client.setCode(dto.getAgency().getCode() != null ? dto.getAgency().getCode() : StringUtils.EMPTY);
+        client.setZipCode(dto.getAgency().getZipCode() != null ? dto.getAgency().getZipCode() : StringUtils.EMPTY);
         invoiceXml.setClient(client);
 
         // Products
-        List<Product> products = dto.getBookings().stream()
-                .map(booking -> mapBookingToProduct(booking, dto.getHotel())) // Pasar el hotel aquí
+        List<Product> products = Optional.ofNullable(dto.getBookings())
+                .orElse(Collections.emptyList())
+                .stream()
+                .flatMap(booking -> mapBookingToProduct(booking, Optional.ofNullable(dto.getHotel()).orElse(new ManageHotelDto())).stream())
                 .collect(Collectors.toList());
 
         invoiceXml.setProductList(products);
 
         // Total Summary
         TotalSummary totalSummary = new TotalSummary();
-        totalSummary.setGrossAmount(dto.getInvoiceAmount());
-        totalSummary.setDiscounts(0.0);
-        totalSummary.setSubTotal(dto.getInvoiceAmount());
-        totalSummary.setTax(0.0);
-        totalSummary.setTotal(dto.getInvoiceAmount());
+        totalSummary.setGrossAmount(BankerRounding.round(dto.getInvoiceAmount()));
+        totalSummary.setSubTotal(BankerRounding.round(totalSummary.getGrossAmount() - totalSummary.getDiscounts()));
+        totalSummary.setTotal(BankerRounding.round(totalSummary.getSubTotal() + totalSummary.getTax()));
         invoiceXml.setTotalSummary(totalSummary);
 
         return invoiceXml;
     }
 
-    private Product mapBookingToProduct(ManageBookingDto bookingDto, ManageHotelDto hotelDto) {
-        Product product = new Product();
-        product.setSupplierSku(bookingDto.getHotelBookingNumber() != null ? bookingDto.getHotelBookingNumber() : "");
-        product.setCustomerSku(bookingDto.getReservationNumber() != null ? bookingDto.getReservationNumber().toString() : "");
-        product.setItem(bookingDto.getDescription() != null ? bookingDto.getDescription() : "Servicio de alojamiento");
+    private List<Product> mapBookingToProduct(ManageBookingDto bookingDto, ManageHotelDto hotelDto) {
+        List<Product> products = new ArrayList<>();
+        List<ManageRoomRateDto> roomRates = Optional.ofNullable(bookingDto.getRoomRates()).orElse(Collections.emptyList());
 
-        int days = (int) ChronoUnit.DAYS.between(bookingDto.getCheckIn(), bookingDto.getCheckOut());
-        double unitPrice = days > 0 ? bookingDto.getInvoiceAmount() / days : bookingDto.getInvoiceAmount();
-        product.setQty(days);
-        product.setMu("Unidades");
-        product.setUp(Math.round(unitPrice * 100.0) / 100.0);
-        product.setTotal(bookingDto.getInvoiceAmount());
-        product.setComment("Reserva desde " + bookingDto.getCheckIn().format(DateTimeFormatter.ISO_DATE) +
-                " hasta " + bookingDto.getCheckOut().format(DateTimeFormatter.ISO_DATE));
+        for (ManageRoomRateDto roomRate : roomRates) {
+            int days = (roomRate.getCheckIn() != null && roomRate.getCheckOut() != null)
+                    ? (int) ChronoUnit.DAYS.between(roomRate.getCheckIn(), roomRate.getCheckOut())
+                    : 1;
+            String[] supplierSplit = Optional.ofNullable(bookingDto.getHotelBookingNumber())
+                    .map(s -> s.split("\\s+"))
+                    .orElse(new String[]{StringUtils.EMPTY});
+            Product product = new Product();
+            product.setItem(Optional.ofNullable(roomRate.getRemark()).orElse(StringUtils.EMPTY));
+            product.setTotal(BankerRounding.round(roomRate.getInvoiceAmount()));
+            product.setUp(BankerRounding.round(days > 0 ? roomRate.getInvoiceAmount() / days : roomRate.getInvoiceAmount()));
+            product.setSupplierSku(supplierSplit.length > 1 ? supplierSplit[1] : supplierSplit[0]);
+            product.setCustomerSku(Optional.ofNullable(bookingDto.getCouponNumber()).orElse(StringUtils.EMPTY));
+            product.setQty(days);
 
-        // Taxes
-        Tax tax = new Tax();
-        tax.setType("EXENTO");
-        tax.setRate(0);
-        tax.setAmount(0);
-        tax.setDescription("");
-        product.setTaxes(Collections.singletonList(tax));
+            // Taxes
+            product.setTaxes(new ArrayList<>(List.of(new Tax())));
 
-        // Services Data
-        ServiceData serviceData = new ServiceData();
-        serviceData.setSupplierClientId(hotelDto.getBabelCode() != null ? hotelDto.getBabelCode() : "");
-        serviceData.setSupplierId("SCR");
-        serviceData.setSupplierName(hotelDto.getName());
-        serviceData.setPax(bookingDto.getLastName()+","+bookingDto.getFirstName());
-        serviceData.setBeginDate(bookingDto.getCheckIn().toLocalDate());
-        serviceData.setEndDate(bookingDto.getCheckOut().toLocalDate());
-        serviceData.setPaxNumber(bookingDto.getAdults() + bookingDto.getChildren());
-        serviceData.setAdultsNumber(bookingDto.getAdults());
-        serviceData.setKidsNumber(bookingDto.getChildren());
-        serviceData.setRoomNumber(bookingDto.getRoomNumber());
-        serviceData.setRoomCategory(bookingDto.getRoomCategory() != null ? bookingDto.getRoomCategory().getName() : "");
-        product.setServiceDatas(Collections.singletonList(serviceData));
+            // Services Data
+            ServiceData serviceData = new ServiceData();
+            serviceData.setAdultsNumber(roomRate.getAdults());
+            serviceData.setKidsNumber(roomRate.getChildren());
+            serviceData.setSupplierClientId(Optional.ofNullable(bookingDto.getHotelBookingNumber()).orElse(StringUtils.EMPTY));
+            serviceData.setSupplierId(Optional.ofNullable(hotelDto.getBabelCode()).orElse(StringUtils.EMPTY));
+            serviceData.setSupplierName(hotelDto.getName());
+            serviceData.setPax(
+                    (bookingDto.getLastName() != null ? bookingDto.getLastName() : "") + "," +
+                    (bookingDto.getFirstName() != null ? bookingDto.getFirstName() : "")
+            );
+            serviceData.setPaxNumber(roomRate.getAdults() + roomRate.getChildren());
+            serviceData.setBeginDate(roomRate.getCheckIn() != null ? roomRate.getCheckIn().toLocalDate() : null);
+            serviceData.setEndDate(roomRate.getCheckOut() != null ? roomRate.getCheckOut().toLocalDate() : null);
+            serviceData.setRoomNumber(roomRate.getRoomNumber());
+            product.setServiceDatas(Collections.singletonList(serviceData));
+            products.add(product);
+        }
 
-        return product;
+        return products;
     }
 
     private String buildXmlString(InvoiceXml invoiceXml) {
@@ -131,6 +129,7 @@ public class InvoiceXmlService {
             StringWriter writer = new StringWriter();
             Marshaller marshaller = context.createMarshaller();
             marshaller.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, Boolean.TRUE);
+            marshaller.setProperty(Marshaller.JAXB_ENCODING, StandardCharsets.UTF_8.name());
             marshaller.marshal(invoiceXml, writer);
             return writer.toString();
         } catch (JAXBException e) {
